feat: add column object_name in payload table.
