# src/main/java/hep/crest/server/data/repositories/externals/SqlRequests.java
@@ -111,11 +111,12 @@ public final class SqlRequests {
      */
     public static String getRangeIovPayloadQuery(String iovtablename, String payloadtablename) {
         return "select iv.TAG_NAME, iv.SINCE, iv.INSERTION_TIME, iv.PAYLOAD_HASH, "
-               + " pyld.VERSION, pyld.OBJECT_TYPE, " + " pyld.DATA_SIZE from " + iovtablename + " iv "
+               + " pyld.VERSION, pyld.OBJECT_TYPE, pyld.OBJECT_NAME, "
+               + " pyld.DATA_SIZE from " + iovtablename + " iv "
                + " LEFT JOIN " + payloadtablename + " pyld " + " ON iv.PAYLOAD_HASH=pyld.HASH "
                + " where iv.TAG_NAME=? AND iv.SINCE>=COALESCE(" + "  (SELECT max(iov2.SINCE) FROM "
                + iovtablename + " iov2 "
-               + "  WHERE iov2.TAG_NAME=? AND iov2.SINCE<=? AND iov2.INSERTION_TIME<=? ),0)"
+               + " WHERE iov2.TAG_NAME=? AND iov2.SINCE<=? AND iov2.INSERTION_TIME<=? ),0)"
                + " AND iv.SINCE<=? AND iv.INSERTION_TIME<=? "
                + " ORDER BY iv.SINCE ASC, iv.INSERTION_TIME DESC";
     }
